--- a/css/index.css
+++ b/css/index.css
@@ -456,6 +456,40 @@ ul.ul-paper div.paper-content:hover {
     text-align:right;
  }
 
+ /* swiper*/
+ .swiper-container {
+    width: 100%;
+    height: 360px;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: transparent;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    transition: 300ms;
+    transform: scale(0.8);
+  }
+  .swiper-slide-active,.swiper-slide-duplicate-active{
+    transform: scale(1);
+  }
+
+  .myVideo{
+    border:1px solid #ccc;
+  }
+
 
 
   
