--- a/css/index.css
+++ b/css/index.css
@@ -183,8 +183,8 @@ section {
     width:39%;
 }
 .home-section #author{
-    width:270px;
-    height:270px;
+    width:300px;
+    height:300px;
     border-radius: 50%;
     margin:0 auto;
 }
@@ -194,6 +194,9 @@ section {
     text-align:left;
 }
 
+.home-section .profile.pro-r a{
+    color:#333;
+}
 .portrait-title{
     font-size: 16px;
     padding:30px 0;
