--- a/css/index.css
+++ b/css/index.css
@@ -196,6 +196,8 @@ section {
 
 .home-section .profile.pro-r a{
     color:#333;
+    font-weight:600;
+    text-decoration: underline;
 }
 .portrait-title{
     font-size: 16px;
