--- a/css/index.css
+++ b/css/index.css
@@ -195,9 +195,9 @@ section {
 }
 
 .home-section .profile.pro-r a{
-    color:#333;
+    color: #4caf50;
     font-weight:600;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 .portrait-title{
     font-size: 16px;
